# b2s-trader

./: .clang-format  .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md
common/: currency.h  (+15 more)
database/: CMakeLists.txt  README.md
database/include/: database.h
database/src/: database.cpp
database/unit-test/: CMakeLists.txt  database_ut.cpp  database_ut.h
features/: CMakeLists.txt
features/include/: license.h  stop_loss_announcer.h  telegram_announcer.h
features/resources/: commands.h  feature_utils.h  resources.h
features/src/: license.cpp  stop_loss_announcer.cpp  telegram_announcer.cpp
features/unit-tests/: CMakeLists.txt  feature_telegram_unit_test.cpp  feature_telegram_unit_test.h  future_license_unit_test.cpp  future_license_unit_test.h
model/: CMakeLists.txt
model/include/: trade_configuration.h
model/include/holders/: strategies_settings_holder.h  trade_configs_holder.h  trade_orders_holder.h  trade_signaled_strategy_market_holder.h
model/include/orders/: orders_matching.h  orders_profit.h
model/include/settings/: app_settings.h  buy_settings.h  coin_settings.h  sell_settings.h  stock_exchange_settings.h
model/src/: trade_configuration.cpp
model/src/holders/: strategies_settings_holder.cpp  trade_configs_holder.cpp  trade_orders_holder.cpp  trade_signaled_strategy_market_holder.cpp
model/src/orders/: orders_matching.cpp  orders_profit.cpp
serializer/: CMakeLists.txt
serializer/include/: app_settings_json_serializer.h  feature_json_serializer.h  strategy_json_serializer.h  trade_config_json_serializer.h
serializer/src/: app_settings_json_serializer.cpp  feature_json_serializer.cpp  strategy_json_serializer.cpp  trade_config_json_serializer.cpp
serializer/unit-tests/: CMakeLists.txt  strategy_serializer_up.cpp  strategy_serializer_ut.h  trade_config_serializer_ut.cpp  trade_config_serializer_ut.h
signature_encryptor/: CMakeLists.txt
signature_encryptor/resources/: resources.h
signature_encryptor/src/: main.cpp
signature_encryptor/unit_tests/: CMakeLists.txt  signature_encryptor_unit_test.cpp  signature_encryptor_unit_test.h
stocks_exchange/: CMakeLists.txt
stocks_exchange/include/: base_query.h  binance_query.h  bittrex_query.h  currency_lots_holder.h  huobi_api_signature.h  huobi_query.h  kraken_query.h  poloniex_query.h  query.h  query_factory.h  query_processor.h  stock_exchange_library.h  stock_exchange_utils.h
stocks_exchange/resources/: resources.h
stocks_exchange/src/: binance_query.cpp  bittrex_query.cpp  currency_lots_holder.cpp  huobi_query.cpp  kraken_query.cpp  poloniex_query.cpp  query_factory.cpp  query_processor.cpp  stock_exchange_library.cpp
stocks_exchange/unit-test/: CMakeLists.txt  stock_exchange_binance_unit_test.cpp  stock_exchange_binance_unit_test.h  stock_exchange_bittrex_unit_test.cpp  stock_exchange_bittrex_unit_test.h  stock_exchange_huobi_unit_test.cpp  stock_exchange_huobi_unit_test.h  stock_exchange_kraken_unit_test.cpp  stock_exchange_kraken_unit_test.h  stock_exchange_poloniex_unit_test.cpp  stock_exchange_poloniex_unit_test.h
strategies/: CMakeLists.txt
strategies/include/: line.h  stdafx.h  strategies_utils.h  strategy_facade.h  strategy_factory.h  trade_strategy.h
strategies/include/bollinger_bands/: bollinger_bands.h  bollinger_bands_base.h  bollinger_bands_utils.h  bottom_line.h  middle_line.h  top_line.h
strategies/include/bollinger_bands_advance/: bollinger_bands_advance.h
strategies/include/exponential_moving_average/: exponential_moving_average.h
strategies/include/macd/: macd.h  macd_base.h
strategies/include/moving_average/: moving_average.h  moving_average_base.h  moving_average_line.h
strategies/include/moving_averages_crossing/: moving_averages_crossing.h
strategies/include/oscillator_base/: oscillator_base.h
strategies/include/rsi/: rsi.h  rsi_base.h
strategies/include/simple_moving_average/: simple_moving_average.h
strategies/include/stochastic_oscillator/: stochastic_oscillator.h  stochastic_oscillator_base.h
strategies/resources/: resources.h
strategies/src/: stdafx.cpp  strategy_facade.cpp  strategy_factory.cpp
strategies/src/bollinger_bands/: bollinger_bands.cpp  bottom_line.cpp  middle_line.cpp  top_line.cpp
strategies/src/bollinger_bands_advance/: bollinger_bands_advance.cpp
strategies/src/exponential_moving_average/: exponential_moving_average.cpp
strategies/src/macd/: macd.cpp
strategies/unit_test/: CMakeLists.txt  bollinger_bands_advance_strategy_ut.cpp  bollinger_bands_advance_strategy_ut.h  bollinger_bands_strategy_ut.cpp  bollinger_bands_strategy_ut.h  ema_strategy_ut.cpp  ema_strategy_ut.h  macd_ut.cpp  macd_ut.h  moving_averages_crossing_strategy_ut.cpp  moving_averages_crossing_strategy_ut.h  rsi_strategy_ut.cpp  rsi_strategy_ut.h  sma_strategy_ut.cpp  sma_strategy_ut.h  stochastic_oscillator_ut.cpp  stochastic_oscillator_ut.h
trader/: CMakeLists.txt  main.cpp
trader/include/: app_chart_updater.h  app_controller.h  app_stats_updater.h  trader.h  trading_buying_strategy_processor.h  trading_manager.h  trading_message_sender.h  trading_processor.h  trading_selling_strategy_processor.h
trader/src/: app_chart_updater.cpp  app_controller.cpp  app_stats_updater.cpp  trader.cpp  trading_buying_strategy_processor.cpp  trading_manager.cpp  trading_message_sender.cpp  trading_processor.cpp  trading_selling_strategy_processor.cpp
trader/unit-test/: CMakeLists.txt  trading_run_ut.cpp  trading_run_ut.h
view/: CMakeLists.txt
view/include/: custom_chart_view.h  custom_chart_widget.h  custom_menu.h  gui_processor.h
view/src/: custom_chart_view.cpp  custom_chart_widget.cpp  custom_menu.cpp  gui_processor.cpp
view/ui/: about_dialog.ui  bb_advanced_settings_dialog.ui  bb_settings_dialog.ui  chart_manual.ui  create_rsi_settings_dialog.ui  create_strategy_dialog.ui  create_trade_configuration_dialog.ui  ema_settings_dialog.ui  intervals_dialog.ui  license_dialog.ui  main_menu.ui  moving_average_crossing_settings_dialog.ui  sma_settings_dialog.ui  stochastic_oscillator_dialog.ui  stop_loss_dialog.ui  telegram_dialog.ui
(+132 files in other folders)
